--- a/массивы/practicle/index.html
+++ b/массивы/practicle/index.html
@@ -1,29 +1,47 @@
 <!DOCTYPE html>
-<html lang="ru">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="https://result.school/logo-result.school.png"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
+    <title>Массивы и Объекты</title>
     <script src="js/main.js" defer></script>
+  </head>
+  <body class="bg-dark text-light">
+    <div class="container w-50 pt-5">
+      <h1>Заметки</h1>
+      <input
+        type="text"
+        class="form-control mb-2"
+        placeholder="Введите название"
+        id="title"
+      />
+      <button class="btn btn-outline-info w-100 mb-2" id="create">
+        Добавить
+      </button>
 
-</head>
-
-<body>
-    <div class="todo">
-        <div class="todo__box">
-            <h2 class="todo__title">Список задач</h2>
-            <div class="todo__row">
-                <input type="text" class="todo__input" id="title" placeholder="Напишите вашу задачу">
-                <button class="todo__btn" id="create">Добавить</button>
-            </div>
-            <ul class="todo__list" id="list">
-                
-            </ul>
-        </div>
+      <ul class="list-group list-group-flush" id="list">
+        <!-- <li
+          class="list-group-item d-flex justify-content-between align-items-center"
+        >
+          <span>Название</span>
+          <span>
+            <span class="btn btn-small btn-success">&check;</span>
+            <span class="btn btn-small btn-danger">&times;</span>
+          </span>
+        </li> -->
+      </ul>
     </div>
-</body>
+  </body>
 
 </html>
