--- a/типы данных/homework/index.html
+++ b/типы данных/homework/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>theory.js</title>
-    <script src="theory.js" defer></script>
-    <!-- <script src="cheat sheet on js.js" defer></script> -->
+    <title>Тип данных</title>
 </head>
 
 <body>
-
+    
+    <script src="main.js"></script>
 </body>
+
 </html>
+
