--- a/числа в деталях/practicle/index.html
+++ b/числа в деталях/practicle/index.html
@@ -14,7 +14,8 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
-    <title>03. JavaScript детальней</title>
+    <title>JavaScript детальней | Числа в деталях</title>
+    <script src="practicle.js"></script>
   </head>
   <body class="bg-dark text-light">
     <div class="container w-50 pt-5">
