--- a/Числа, Строки, Дата/practicle/index.html
+++ b/Числа, Строки, Дата/practicle/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
     />
     <title>JavaScript детальней | Числа в деталях</title>
-    <script src="practicle.js"></script>
+    <script src="practicle.js" defer></script>
   </head>
   <body class="bg-dark text-light">
     <div class="container w-50 pt-5">
