--- a/Числа, Строки, Дата/theory/theoty.html
+++ b/Числа, Строки, Дата/theory/theoty.html
@@ -94,7 +94,7 @@ console.log(now.getFullYear()); // Год, например 2025</code></pre>
 
     <!-- <script src="01-numbers.js"></script> -->
     <!-- <script src="02-strings.js"></script> -->
-    <script src="03-function.js"></script>
-    <!-- <script src="numbers.js"></script> -->
+    <!-- <script src="03-function.js"></script> -->
+    <script src="04-data.js"></script>
 </body>
 </html>
